# nds-cmake

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
arm7/: CMakeLists.txt  main-arm7.cpp
arm9/: CMakeLists.txt  init.cpp  main-arm9.cpp
cmake/: nds.grit.cmake  nds.macro.cmake  nds.ndstool.cmake  nds.platform.cmake  toolchain.nds.cmake
shared/: CMakeLists.txt  Example.cpp  Example.hpp  dsutils.hpp  example.hpp
